--- a/7.master_Css_display/index.html
+++ b/7.master_Css_display/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.9.0/fonts/remixicon.css" rel="stylesheet" />
+    <script src="./script.js" defer></script>
 </head>
 
 <body>
